<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mm_pay_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/pay_top_background" >

    		<Button
                android:id="@+id/dj_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:background="@drawable/dj_back" />
            </LinearLayout>

            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dj_zhidou_line"
            android:orientation="horizontal"
            >


                        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="金豆:"
                android:textSize="15sp"
                android:textColor="#7b0202" />

            <TextView
                android:id="@+id/gen_zhi_dou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="80000"
                android:textColor="#7b0202" />
        </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:background="@drawable/pay_red_line" />

            <Button
                android:id="@+id/mon_2_btn"
                style="@style/mm_buy_btn_style"
                android:text="@string/pay_type1_2" />

            <Button
                android:id="@+id/mon_4_btn"
                style="@style/mm_buy_btn_style"
                android:text="@string/pay_type1_4" />

            <Button
                android:id="@+id/mon_5_btn"
                style="@style/mm_buy_btn_style"
                android:text="@string/pay_type1_5" />

            <Button
                android:id="@+id/mon_8_btn"
                style="@style/mm_buy_btn_style"
                android:text="@string/pay_type1_8" />

            <Button
                android:id="@+id/mon_10_btn"
                style="@style/mm_buy_btn_style"
                android:text="@string/pay_type1_10" />

            <Button
                android:id="@+id/mon_15_btn"
                style="@style/mm_buy_btn_style"
                android:text="@string/pay_type1_15" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>