<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pre_recharge_root_record"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@null" >

    <LinearLayout
        android:id="@+id/relative_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/pre_recharge_record_dialog_bg"
        android:padding="0dp"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/pre_recharge_defrost"
            android:contentDescription="@string/image_description" />

        <LinearLayout
            android:id="@+id/pre_recharge_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/beans_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/pre_recharge_beans_notice_bg"
                android:singleLine="true"
                android:text="@string/text_prerecharge_description_one"
                android:textColor="#7e1200"
                android:textSize="@dimen/text_size15" />

            <TextView
                android:id="@+id/pre_recharge_beans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:text="@string/text_prerecharge_description_two"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size15" />

            <TextView
                android:id="@+id/win_beans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/text_prerecharge_description_three"
                android:textColor="@color/black"
                android:singleLine="true"
                android:textSize="@dimen/text_size15" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/bisque"
                android:contentDescription="@string/image_description" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_charge"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size16" />

                <TextView
                    android:id="@+id/pre_recharge_text_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#7e1200"
                    android:text="@string/text_charge_yuan"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size18"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_defreeze_beans"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/charge"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:padding="0dp"
                    android:background="@drawable/general_btn_bg"
                    android:text="@string/text_charge"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size18" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/pre_recharge_ingame_btn_cancel"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="1dp"
        android:background="@drawable/pre_recharge_cancel" />

</RelativeLayout>